--- a/Web-Homework/Web-Homework.csproj
+++ b/Web-Homework/Web-Homework.csproj
@@ -19,11 +19,21 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
     <None Remove="Microsoft.Data.SqlClient" />
+    <None Remove="Repositories\" />
+    <None Remove="Views\Category\" />
+    <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+    <None Remove="Views\Person\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+    <Folder Include="Views\Category\" />
+    <Folder Include="Views\Person\" />
   </ItemGroup>
 </Project>
