--- a/Web-Homework/Web-Homework.csproj
+++ b/Web-Homework/Web-Homework.csproj
@@ -34,12 +34,16 @@
     <None Remove="X.PagedList.Mvc.Core" />
     <None Remove="Views\Login\" />
     <None Remove="ViewComponents\" />
+    <None Remove="Views\Person\Components\" />
+    <None Remove="Views\Person\Components\FilteredCategory\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
     <Folder Include="Views\Person\" />
     <Folder Include="Views\Login\" />
     <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Person\Components\" />
+    <Folder Include="Views\Person\Components\FilteredCategory\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Shared\_Layout.cshtml">
