--- a/Web-Homework/appsettings.json
+++ b/Web-Homework/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1433; Initial Catalog=DormitoryDB; User Id=SA;Password=Abudu321.;Encrypt=yes;TrustServerCertificate=true; Integrated Security=true;Trusted_Connection=false;MultipleActiveResultSets=True;"
+  }
 }
